add about me section

--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soheil Azimi</title>
 </head>
+
 <body>
     <div>
         <h1>isoheil</h1>
     </div>
     <div>
-        <p>This is personal website</p>
-        <p>Updating ...</p>
+        <h2>About Me:</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque illo quis consequatur quasi omnis excepturi
+            voluptate, libero itaque maiores qui dolorem nesciunt perferendis natus molestias ex temporibus voluptatum.
+            Ullam, suscipit.</p>
     </div>
 </body>
+
 </html>
